Replaced swagger gin for fiber implementation
